feat: add ControllerAdvice to handle error and add regarding app service test